2015-12-24  Liu Xin  <meteor1113@qq.com>

	* init-lisp.el: Remove xgtags.
	Remove winsav.
	Remove word-count.
	Remove vimpulse.

	* init-elpa.el ("rust-mode"): Config rustfmt, racer, ac-racer.
	(rust-mode-hook): Add cargo.
	Add go-mode, go-autocomplete, go-doc, go-snippets.
	: Add ac-clang, Remove auto-complete-clang.
	: Add ggtags.

2015-12-23  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Add rust-mode, rustfmt, racer, ac-racer.

2015-09-08  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el (ecb-symboldef-find-tag-by-etags): Disable etags's
	'Visit tags tagle' dialog when ecb's symboldef is actived.

2015-06-10  Liu Xin  <meteor1113@qq.com>

	* init-basic.el (format-xml-directory): Add function format-xml-directory.

2015-05-28  Liu Xin  <meteor1113@qq.com>

	* init-basic.el (kbd): binding Ctrl-a to mark-whole-buffer.

2015-05-06  Liu Xin  <meteor1113@qq.com>

	* init-toolbar.el: Adjust minormode menu's order.
	(minormode-sub-menu): Adjust minor mode menu.

2015-05-05  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Fix.
	("org"): Fix yasnippet setting.

2015-05-04  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Add init-elpa.el

2015-03-30  Liu Xin  <meteor1113@gmail.com>

	* init-misc.el (projectile-global-mode): Enable projectile default.

	* Update magit to 1.2.2

	* init-misc.el (projectile-mode): Add projectile.

2015-03-11  Liu Xin  <meteor1113@gmail.com>

	* init-custom.el (holiday-other-holidays): set calendar

	* init-misc.el ("calendar"): set cal-china-x

	* init-basic.el (holiday-local-holidays): set calendar

	* init-site.el (fboundp): set ecb-source-path

2015-03-10  Liu Xin  <meteor1113@gmail.com>

	* init-custom.el: Add init-custom.el

2014-10-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (default-directory): update for emacs-24.4

	* init-misc.el ("tabbar"): update for emacs-24.4's desktop-save-mode.

	* init-basic.el (key-binding): update for emacs-24.4

2014-10-05  Meteor Liu  <meteor1113@gmail.com>
