@@ -4,6 +4,7 @@
 	Remove winsav.
 	Remove word-count.
 	Remove vimpulse.
+	Remove ifdef.
 
 	* init-elpa.el ("rust-mode"): Config rustfmt, racer, ac-racer.
 	(rust-mode-hook): Add cargo.
